data/derived/fa15/progs/unify/prog2105.ml.out
Characters 96-102:
  in wwhile ((fx b), b);;
             ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
